[package]
edition = "2021"
name = "codemgr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0.0"
inquire = "0.2.1"
question = "0.2.2"
serde = "1.0.135"
serde_derive = "1.0.135"
toml = "0.5.9"
